teacher: add GetStudents API
