# docs/swagger.json
@@ -894,6 +894,18 @@
                         "description": "需要查询学生用户名",
                         "name": "name",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询学生真实姓名",
+                        "name": "queryRealname",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询学生学号",
+                        "name": "queryUserSchoollD",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1394,6 +1406,18 @@
                         "type": "string",
                         "description": "需要查询教师用户名",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询教师真实姓名",
+                        "name": "queryRealname",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询教师学号",
+                        "name": "queryUserSchoollD",
                         "in": "query"
                     }
                 ],
@@ -2097,6 +2121,75 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.CommonResponse-any"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.CommonResponse-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/authrequired/teacher/student": {
+            "post": {
+                "description": "获取指定学生信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "获取指定学生信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "登录返回的Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "email",
+                        "description": "需要查询的学生邮箱",
+                        "name": "queryemail",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询学生ID",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询学生用户名",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询学生真实姓名",
+                        "name": "queryRealname",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "需要查询学生学号",
+                        "name": "queryUserSchoollD",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.CommonResponse-model_GetUserResponse"
                         }
                     },
                     "400": {
